bug fix:when list's size > list1. the diff would have more structure inside because they would be added to diff