@@ -52,6 +52,11 @@
             <version>5.10.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.5.6</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -61,11 +66,11 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.11.0</version>
                 <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                    <release>21</release>
+                    <source>23</source>
+                    <target>23</target>
+                    <release>23</release>
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
+                        <arg></arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
